--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "SwiftCLI"]
 	path = SwiftCLI
-	url = https://github.com/jakeheis/SwiftCLI.git
+	url = git@github.com:toshi0383/SwiftCLI.git
