Fix submodule issue

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
 os:
 - osx
+# Handle git submodules yourself
+git:
+  submodules: false
+# Use sed to replace the SSH URL with the public URL, then initialize submodules
+before_install:
+- git submodule update --init --recursive
 language: generic
 sudo: required
 dist: trusty
